--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="card">
             <h2>Вітаємо на нашому сайті!</h2>
         </div>
-       
+        <button class="custom-btn btn"><span>Спробуй</span><span>Розпочати роботу</span></button>
     </div>
     <script src="script.js"></script>
 </body>
